public/styles.css
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat";
/*  background: url("http://res.cloudinary.com/shino/image/upload/v1471126188/bgwallpaper_tuuxtf.jpg") no-repeat center center fixed;
*/
  background-size: cover;
  background-attachment: fixed;
  background-color: gray;
}

#bg {
  position: fixed; 
  top: 0; 
  left: 0; 
  min-width: 100%;
  min-height: 100%;
}

#input {
  border: 1px solid;
  color: #fff;
  border-width: 0 0 1px 0;
  font-size: 2.3em;
  background: url(https://remoteok.io/assets/search-white.png) no-repeat transparent;
  background-position: 0% 50%;
  background-size: 1em;
  padding-left: 20px;
}


#input:focus {
  border-bottom-color: blue;
}

#load-tweets {

  color: #fff;
  border-width: 0 0 1px 0;
  padding: 0.5em 1em;
  font-size: 2.3em;
  background: url(https://remoteok.io/assets/search-white.png) no-repeat transparent;
  background-position: 0% 50%;
  background-size: 1em;
}

.nav {
  color: #4B5267;
  padding-top: 10px;
}

#sidebar{
  background:#151718;
  width:200px;
  height:7%;
  display:block;
  position:absolute;
  right:-200px;
  top:0px;
  transition:right 0.3s linear;
}

#sidebar.visible{
  right:0px;
  transition:right 0.3s linear;
}

ul{
  margin:0px;
  padding:0px;
}

ul li{
  list-style:none;
}

ul li a{
  background: #151718;
  color: #fff;
  border-bottom:1px solid #111;
  display:block;
  width:200px;
  padding:10px;
  text-align: center;
  text-decoration: none;

}

#sidebar-btn {
  display:inline-block;
  vertical-align: middle;
  width:20px;
  height:15px;
  cursor:pointer;
  margin:20px;
  position:absolute;
  top:0px;
  left:-60px;
}

#sidebar-btn span{
  height:2px;
  background: white;
  margin-bottom:5px;
  display:block;
}

#sidebar-btn span:nth-child(3){
  width:75%;
}

#sidebar-btn span:nth-child(2){
  width:50%;
}

body, html, .tweet-container, .tweet-container > * , .tweets{
  height: 100%;
  position: relative;
}
.tweet-container {
  padding-top: 5%;
}

.tweets {
  overflow-y: auto;
}


#title {
  font-size: 2em;
  font-family: Montserrat;
  color: #fff;
  text-align: center;
  padding-left: 0.5em;
}

#video-background {
  position: fixed;
  right: 0; 
  bottom: 0;
  min-width: 100%; 
  min-height: 100%;
  width: auto; 
  height: auto;
  z-index: -1;
}

 #landing {
  padding-top: 25em;
  margin: 0 auto;
}


.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

#type {
  color: white;
  font-family: 'Montserrat', sans-serif;
  font-size: 3.5em;

}

.element {
color: white;
font-family: 'Montserrat', sans-serif;
font-size: 2.5em;
display: inline;
}

.avatar {
  float: left;
  width: 48px;
  height: 48px;
  border-radius: 5px;
  margin-top: 3px;
  padding-top: 3px;
  position: relative;
  top: 50%;
  transform: translateY(-50%) translateX(10%);
}

.avatar-container {
  margin-right: 5%;
  border-radius: 5px;
}

.neutral {
  background-color: #95a5a6;
}

.positive {
  background-color: #2ecc71;
}

.negative {
  background-color: #e74c3c;
  margin-right: 5%;
}

.tweet-container columns {
  padding: 9px 12px;
}

.tweet-box {
  margin: 10px;
}

.tweets-neutral, .tweets-negative, .tweets-positive {
  background-color: white;
}

.column .is-one-quarter {
  width: 600px;
}

.tweets-neutral, .tweets-positive, .tweets-negative {
  /* float: left; */
  display: inline-block;
  overflow-y: auto;
  height: 100%;
}

.ct-series-a .ct-bar {
  /* Colour of your bars */
  stroke: red;
  /* The width of your bars */
  stroke-width: 10px;
  /* Yes! Dashed bars! */
/*  stroke-dasharray: 20px;
*/  /* Maybe you like round corners on your bars? */
  stroke-linecap: round;
}

.ct-chart .ct-bar:nth-of-type(3n+1) {
  stroke: #EFB200;
}

.ct-chart .ct-bar:nth-of-type(3n+2) {
  stroke: #71A28A;
}

.ct-chart .ct-bar:nth-of-type(3n+3) {
  stroke: #FF6414;
}

.ct-chart .ct-bar:nth-of-type(4n+4) {
  stroke: #91A453;
}

